# moba-draft-agent

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
catalog/: champions.yaml
data/empirical/: README.md  counters.jsonl  synergies.jsonl  winrate.jsonl
data/matches/: README.md  matches.csv
docs/: agent.md  development.md
policies/: assistant.md
rules/: draft-rules.yaml
src/moba_draft_agent/: __init__.py  agent_graph.py  champions.py  chat_openrouter.py  draft_state.py  empirical.py  loaders.py  matches.py  paths.py
tests/: conftest.py  test_agent_graph.py  test_draft_state.py  test_empirical.py  test_loaders.py  test_matches.py  test_openrouter_smoke.py  test_phase0.py  test_resolve_champion.py
web/: README.md  manage.py  path_setup.py
web/chat/: apps.py  auth_env.py  graph_runner.py  models.py  urls.py  views.py
web/chat/management/commands/: ensure_login_user.py
web/config/: settings.py  urls.py  wsgi.py
web/templates/: base.html
web/templates/chat/: chat.html
web/templates/registration/: login.html
